ghc-6.2/hslibs/win32/Win32File_stub_ffi.h

extern UINT prim_gENERIC_NONE();
extern UINT prim_gENERIC_READ();
extern UINT prim_gENERIC_WRITE();
extern UINT prim_gENERIC_EXECUTE();
extern UINT prim_gENERIC_ALL();
extern UINT prim_dELETE();
extern UINT prim_rEAD_CONTROL();
extern UINT prim_wRITE_DAC();
extern UINT prim_wRITE_OWNER();
extern UINT prim_sYNCHRONIZE();
extern UINT prim_sTANDARD_RIGHTS_REQUIRED();
extern UINT prim_sTANDARD_RIGHTS_READ();
extern UINT prim_sTANDARD_RIGHTS_WRITE();
extern UINT prim_sTANDARD_RIGHTS_EXECUTE();
extern UINT prim_sTANDARD_RIGHTS_ALL();
extern UINT prim_sPECIFIC_RIGHTS_ALL();
extern UINT prim_aCCESS_SYSTEM_SECURITY();
extern UINT prim_mAXIMUM_ALLOWED();
extern UINT prim_fILE_SHARE_NONE();
extern UINT prim_fILE_SHARE_READ();
extern UINT prim_fILE_SHARE_WRITE();
extern UINT prim_cREATE_NEW();
extern UINT prim_cREATE_ALWAYS();
extern UINT prim_oPEN_EXISTING();
extern UINT prim_oPEN_ALWAYS();
extern UINT prim_tRUNCATE_EXISTING();
extern UINT prim_fILE_ATTRIBUTE_READONLY();
extern UINT prim_fILE_ATTRIBUTE_HIDDEN();
extern UINT prim_fILE_ATTRIBUTE_SYSTEM();
extern UINT prim_fILE_ATTRIBUTE_DIRECTORY();
extern UINT prim_fILE_ATTRIBUTE_ARCHIVE();
extern UINT prim_fILE_ATTRIBUTE_NORMAL();
extern UINT prim_fILE_ATTRIBUTE_TEMPORARY();
extern UINT prim_fILE_ATTRIBUTE_COMPRESSED();
extern UINT prim_fILE_FLAG_WRITE_THROUGH();
extern UINT prim_fILE_FLAG_OVERLAPPED();
extern UINT prim_fILE_FLAG_NO_BUFFERING();
extern UINT prim_fILE_FLAG_RANDOM_ACCESS();
extern UINT prim_fILE_FLAG_SEQUENTIAL_SCAN();
extern UINT prim_fILE_FLAG_DELETE_ON_CLOSE();
extern UINT prim_fILE_FLAG_BACKUP_SEMANTICS();
extern UINT prim_fILE_FLAG_POSIX_SEMANTICS();
extern UINT prim_sECURITY_ANONYMOUS();
extern UINT prim_sECURITY_IDENTIFICATION();
extern UINT prim_sECURITY_IMPERSONATION();
extern UINT prim_sECURITY_DELEGATION();
extern UINT prim_sECURITY_CONTEXT_TRACKING();
extern UINT prim_sECURITY_EFFECTIVE_ONLY();
extern UINT prim_sECURITY_SQOS_PRESENT();
extern UINT prim_sECURITY_VALID_SQOS_FLAGS();
extern DWORD prim_mOVEFILE_REPLACE_EXISTING();
extern DWORD prim_mOVEFILE_COPY_ALLOWED();
extern DWORD prim_mOVEFILE_DELAY_UNTIL_REBOOT();
extern DWORD prim_fILE_BEGIN();
extern DWORD prim_fILE_CURRENT();
extern DWORD prim_fILE_END();
extern UINT prim_dRIVE_UNKNOWN();
extern UINT prim_dRIVE_NO_ROOT_DIR();
extern UINT prim_dRIVE_REMOVABLE();
extern UINT prim_dRIVE_FIXED();
extern UINT prim_dRIVE_REMOTE();
extern UINT prim_dRIVE_CDROM();
extern UINT prim_dRIVE_RAMDISK();
extern DWORD prim_dDD_RAW_TARGET_PATH();
extern DWORD prim_dDD_REMOVE_DEFINITION();
extern DWORD prim_dDD_EXACT_MATCH_ON_REMOVE();
extern DWORD prim_sCS_32BIT_BINARY();
extern DWORD prim_sCS_DOS_BINARY();
extern DWORD prim_sCS_WOW_BINARY();
extern DWORD prim_sCS_PIF_BINARY();
extern DWORD prim_sCS_POSIX_BINARY();
extern DWORD prim_sCS_OS216_BINARY();
extern DWORD prim_fILE_NOTIFY_CHANGE_FILE_NAME();
extern DWORD prim_fILE_NOTIFY_CHANGE_DIR_NAME();
extern DWORD prim_fILE_NOTIFY_CHANGE_ATTRIBUTES();
extern DWORD prim_fILE_NOTIFY_CHANGE_SIZE();
extern DWORD prim_fILE_NOTIFY_CHANGE_LAST_WRITE();
extern DWORD prim_fILE_NOTIFY_CHANGE_SECURITY();
extern DWORD prim_fILE_TYPE_UNKNOWN();
extern DWORD prim_fILE_TYPE_DISK();
extern DWORD prim_fILE_TYPE_CHAR();
extern DWORD prim_fILE_TYPE_PIPE();
extern DWORD prim_fILE_TYPE_REMOTE();
extern void* prim_deleteFile(char * arg1);
extern int access_prim_deleteFile_gc_failed(HsPtr);
extern void* access_prim_deleteFile_gc_failstring(HsPtr);