ghc-6.2/hslibs/win32/Win32File.hs

module Win32File
{-
	( AccessMode, ShareMode, CreateMode, FileAttributeOrFlag
	, CreateFile, CloseHandle, DeleteFile, CopyFile
	, MoveFileFlag, MoveFile, MoveFileEx, 
	)
-}
where

import Win32Types
import StdDIS


----------------------------------------------------------------
-- Enumeration types
----------------------------------------------------------------

type AccessMode   = UINT

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_gENERIC_NONE" gENERIC_NONE :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_gENERIC_READ" gENERIC_READ :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_gENERIC_WRITE" gENERIC_WRITE :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_gENERIC_EXECUTE" gENERIC_EXECUTE :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_gENERIC_ALL" gENERIC_ALL :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dELETE" dELETE :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_rEAD_CONTROL" rEAD_CONTROL :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_wRITE_DAC" wRITE_DAC :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_wRITE_OWNER" wRITE_OWNER :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sYNCHRONIZE" sYNCHRONIZE :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sTANDARD_RIGHTS_REQUIRED" sTANDARD_RIGHTS_REQUIRED :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sTANDARD_RIGHTS_READ" sTANDARD_RIGHTS_READ :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sTANDARD_RIGHTS_WRITE" sTANDARD_RIGHTS_WRITE :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sTANDARD_RIGHTS_EXECUTE" sTANDARD_RIGHTS_EXECUTE :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sTANDARD_RIGHTS_ALL" sTANDARD_RIGHTS_ALL :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sPECIFIC_RIGHTS_ALL" sPECIFIC_RIGHTS_ALL :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_aCCESS_SYSTEM_SECURITY" aCCESS_SYSTEM_SECURITY :: AccessMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_mAXIMUM_ALLOWED" mAXIMUM_ALLOWED :: AccessMode

----------------------------------------------------------------

type ShareMode   = UINT

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_SHARE_NONE" fILE_SHARE_NONE :: ShareMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_SHARE_READ" fILE_SHARE_READ :: ShareMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_SHARE_WRITE" fILE_SHARE_WRITE :: ShareMode

----------------------------------------------------------------

type CreateMode   = UINT

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_cREATE_NEW" cREATE_NEW :: CreateMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_cREATE_ALWAYS" cREATE_ALWAYS :: CreateMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_oPEN_EXISTING" oPEN_EXISTING :: CreateMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_oPEN_ALWAYS" oPEN_ALWAYS :: CreateMode
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_tRUNCATE_EXISTING" tRUNCATE_EXISTING :: CreateMode

----------------------------------------------------------------

type FileAttributeOrFlag   = UINT

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_READONLY" fILE_ATTRIBUTE_READONLY :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_HIDDEN" fILE_ATTRIBUTE_HIDDEN :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_SYSTEM" fILE_ATTRIBUTE_SYSTEM :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_DIRECTORY" fILE_ATTRIBUTE_DIRECTORY :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_ARCHIVE" fILE_ATTRIBUTE_ARCHIVE :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_NORMAL" fILE_ATTRIBUTE_NORMAL :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_TEMPORARY" fILE_ATTRIBUTE_TEMPORARY :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_ATTRIBUTE_COMPRESSED" fILE_ATTRIBUTE_COMPRESSED :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_WRITE_THROUGH" fILE_FLAG_WRITE_THROUGH :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_OVERLAPPED" fILE_FLAG_OVERLAPPED :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_NO_BUFFERING" fILE_FLAG_NO_BUFFERING :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_RANDOM_ACCESS" fILE_FLAG_RANDOM_ACCESS :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_SEQUENTIAL_SCAN" fILE_FLAG_SEQUENTIAL_SCAN :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_DELETE_ON_CLOSE" fILE_FLAG_DELETE_ON_CLOSE :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_BACKUP_SEMANTICS" fILE_FLAG_BACKUP_SEMANTICS :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_FLAG_POSIX_SEMANTICS" fILE_FLAG_POSIX_SEMANTICS :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_ANONYMOUS" sECURITY_ANONYMOUS :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_IDENTIFICATION" sECURITY_IDENTIFICATION :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_IMPERSONATION" sECURITY_IMPERSONATION :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_DELEGATION" sECURITY_DELEGATION :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_CONTEXT_TRACKING" sECURITY_CONTEXT_TRACKING :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_EFFECTIVE_ONLY" sECURITY_EFFECTIVE_ONLY :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_SQOS_PRESENT" sECURITY_SQOS_PRESENT :: FileAttributeOrFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sECURITY_VALID_SQOS_FLAGS" sECURITY_VALID_SQOS_FLAGS :: FileAttributeOrFlag

----------------------------------------------------------------

type MoveFileFlag   = DWORD

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_mOVEFILE_REPLACE_EXISTING" mOVEFILE_REPLACE_EXISTING :: MoveFileFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_mOVEFILE_COPY_ALLOWED" mOVEFILE_COPY_ALLOWED :: MoveFileFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_mOVEFILE_DELAY_UNTIL_REBOOT" mOVEFILE_DELAY_UNTIL_REBOOT :: MoveFileFlag

----------------------------------------------------------------

type FilePtrDirection   = DWORD

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_BEGIN" fILE_BEGIN :: FilePtrDirection
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_CURRENT" fILE_CURRENT :: FilePtrDirection
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_END" fILE_END :: FilePtrDirection

----------------------------------------------------------------

type DriveType = UINT

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dRIVE_UNKNOWN" dRIVE_UNKNOWN :: DriveType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dRIVE_NO_ROOT_DIR" dRIVE_NO_ROOT_DIR :: DriveType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dRIVE_REMOVABLE" dRIVE_REMOVABLE :: DriveType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dRIVE_FIXED" dRIVE_FIXED :: DriveType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dRIVE_REMOTE" dRIVE_REMOTE :: DriveType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dRIVE_CDROM" dRIVE_CDROM :: DriveType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dRIVE_RAMDISK" dRIVE_RAMDISK :: DriveType
----------------------------------------------------------------

type DefineDosDeviceFlags = DWORD

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dDD_RAW_TARGET_PATH" dDD_RAW_TARGET_PATH :: DefineDosDeviceFlags
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dDD_REMOVE_DEFINITION" dDD_REMOVE_DEFINITION :: DefineDosDeviceFlags
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_dDD_EXACT_MATCH_ON_REMOVE" dDD_EXACT_MATCH_ON_REMOVE :: DefineDosDeviceFlags

----------------------------------------------------------------

type BinaryType = DWORD

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sCS_32BIT_BINARY" sCS_32BIT_BINARY :: BinaryType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sCS_DOS_BINARY" sCS_DOS_BINARY :: BinaryType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sCS_WOW_BINARY" sCS_WOW_BINARY :: BinaryType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sCS_PIF_BINARY" sCS_PIF_BINARY :: BinaryType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sCS_POSIX_BINARY" sCS_POSIX_BINARY :: BinaryType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_sCS_OS216_BINARY" sCS_OS216_BINARY :: BinaryType

----------------------------------------------------------------

type FileNotificationFlag = DWORD

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_NOTIFY_CHANGE_FILE_NAME" fILE_NOTIFY_CHANGE_FILE_NAME :: FileNotificationFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_NOTIFY_CHANGE_DIR_NAME" fILE_NOTIFY_CHANGE_DIR_NAME :: FileNotificationFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_NOTIFY_CHANGE_ATTRIBUTES" fILE_NOTIFY_CHANGE_ATTRIBUTES :: FileNotificationFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_NOTIFY_CHANGE_SIZE" fILE_NOTIFY_CHANGE_SIZE :: FileNotificationFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_NOTIFY_CHANGE_LAST_WRITE" fILE_NOTIFY_CHANGE_LAST_WRITE :: FileNotificationFlag
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_NOTIFY_CHANGE_SECURITY" fILE_NOTIFY_CHANGE_SECURITY :: FileNotificationFlag

----------------------------------------------------------------

type FileType = DWORD

foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_TYPE_UNKNOWN" fILE_TYPE_UNKNOWN :: FileType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_TYPE_DISK" fILE_TYPE_DISK :: FileType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_TYPE_CHAR" fILE_TYPE_CHAR :: FileType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_TYPE_PIPE" fILE_TYPE_PIPE :: FileType
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_fILE_TYPE_REMOTE" fILE_TYPE_REMOTE :: FileType

----------------------------------------------------------------

type LPSECURITY_ATTRIBUTES = Addr
type MbLPSECURITY_ATTRIBUTES = Maybe LPSECURITY_ATTRIBUTES

----------------------------------------------------------------
-- File operations
----------------------------------------------------------------

deleteFile :: String -> IO ()
deleteFile gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  prim_deleteFile arg1
  >>= \ gc_result ->
  access_prim_deleteFile_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_deleteFile_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_deleteFile" prim_deleteFile :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_deleteFile_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_deleteFile_gc_failstring :: Addr -> IO (Addr)
